# Azure_Kinect_python_Ubuntu16.04

./: README.md
opengl/: CMakeLists.txt  main.cpp
python_example/: capture.py
